--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xulio-boilerplate",
   "version": "1.0.0",
   "description": "This is a Boilerplate with parcel to hot reloading and scss bundler",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html"
